--- a/templates/home.html
+++ b/templates/home.html
@@ -431,7 +431,7 @@
                 <a class="fa fa-arrow-down fa-2x"></a>
             </div>
             <section class="wrapper">
-                <h1 style="color:white;position: relative; left: 82vh;bottom:5vh;" class="sentence"> We
+                <h1 style="color:white;position: relative; left: 81vh;bottom:2vh;" class="sentence"> We
                     <div class="slidingVertical">
                         <span>create.</span>
                         <span>design.</span>
@@ -492,7 +492,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="column" style="position: relative;top:30vh;right:25vh;">
+                <div class="column" style="position: relative;top:30vh;right:25.3vh;">
                     <div class="webcard">
                         <div class="container">
                             <h3 style="position: relative;bottom:8vh;">Fully Personalized</h3>
@@ -504,9 +504,9 @@
                 <div class="column" style="position: relative;bottom:22vh;left:25vh;">
                     <div class="webcard">
                         <div class="container">
-                            <h3 style="position: relative;bottom:8vh;">Management by Us</h3>
+                            <h3 style="position: relative;bottom:8vh;">Security</h3>
                             <center> <img src="static/images/manageIcon.png" alt="Sid" style="position: relative;bottom:8vh;width:30%"> </center>
-                            <p style="position: relative;bottom:8vh;padding:3vh;">We provide management and support from our team of experienced developers.</p>
+                            <p style="position: relative;bottom:8vh;padding:3vh;">We take care of the DDOs, database mapping, and management so you don't.</p>
                         </div>
                     </div>
                 </div>
@@ -527,7 +527,7 @@
                     <div class="socialcard">
                         <div class="container">
                             <h3 style="position: relative;bottom:8vh;">We Got This</h3>
-                            <p style="position: relative;bottom:10vh;padding:3vh;">Stand back and handle the other responsibilites in your business while we manage your social media platforms creating an easier way to interact with customers with no effort being wasted. </p>
+                            <p style="position: relative;bottom:12vh;padding:3vh;">Stand back and handle the other responsibilites in your business while we manage your social media platforms creating an easier way to interact with customers with no effort being wasted. </p>
                         </div>
                     </div>
                 </div>
