--- a/templates/home.html
+++ b/templates/home.html
@@ -86,7 +86,7 @@
     /* Animation */
     h2 {
         animation: animated-text 1.5s steps(19, end) 1s 1 normal both,
-            animated-cursor 600ms steps(22, end) infinite;
+            animated-cursor 3900ms steps(50, end) normal both;
     }
 
     /* text animation */
@@ -97,7 +97,7 @@
         }
 
         to {
-            width: 170vh;
+            width: 130vh;
         }
     }
 
@@ -136,14 +136,15 @@
     .bgimg-1 {
         background-position: center;
         background-size: cover;
-        background-image: url("../static/images/lairebg.png");
-        min-height: 100%;
+        background-image: url("../static/images/lairebg4.png");
+        height: 100vh;
     }
 
     #about {
         height: 100vh;
         background-position: center;
         background-size: cover;
+        background-color: white;
     }
 
     #webdev {
@@ -154,7 +155,7 @@
     }
 
     #social {
-        height: 110vh;
+        height: 140vh;
         background-position: center;
         background-size: cover;
         background-color: #403f45;
@@ -171,6 +172,7 @@
         height: 100vh;
         background-position: center;
         background-size: cover;
+        background-color: #ebebeb;
     }
 
     /*Sentence*/
@@ -320,6 +322,7 @@
     }
 
     .button1 {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         display: inline-block;
         padding: 8px 16px;
         vertical-align: middle;
@@ -371,6 +374,7 @@
         border-radius: 2vh;
 
     }
+
     .socialcard {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         background-color: rgba(255, 255, 255, .70);
@@ -380,6 +384,21 @@
         border-radius: 2vh;
 
     }
+
+    .aboutcard {
+        background-color: #7affd5;
+        width: 30vh;
+        height: 30vh;
+        padding-top: 10vh;
+
+    }
+
+    .titlecard {
+        background-color: #d3adff;
+        width: 35vh;
+        height: 0.6vh;
+    }
+
 </style>
 
 <body>
@@ -412,7 +431,7 @@
         <a href="javascript:void(0)" onclick="w3_close()" class="bar-item button large padding-16">Close ×</a>
         <a href="#home" class="bar-item button">HOME</a>
         <a href="#about" class="bar-item button">ABOUT</a>
-        <a href="#webdev" class="bar-item button">WEB DEVELOPMENT</a>
+        <a href="#bdev" class="bar-item button">WEB DEVELOPMENT</a>
         <a href="#social" class="bar-item button">SOCIAL MEDIA</a>
         <a href="#team" class="bar-item button">TEAM</a>
         <a href="#contact" class="bar-item button">CONTACT</a>
@@ -420,24 +439,26 @@
 
     <!-- Header with full-height image -->
     <header class="bgimg-1 display-container" id="home" height="500px">
-        <div class="display-left text-white" style="padding:48px"><span class="xxlarge hide-large hide-medium"></span><br>
+        <div class="display-left text-white" style="padding:48px;"><span class="xxlarge hide-large hide-medium"></span><br>
             <span class="large" style="position: relative; left: 20px;"></span>
             <center>
-                <p><a href="#about" class="button1 white padding-large large margin-top" style="position:relative;left:9vw;top:45vh;">Learn more</a>
-                    <a href="#contact" class="button1 blue padding-large large margin-top" style="position:relative;left:59vw;top:45vh">Contact Now</a>
+                <p><a href="#about" class="button1 white padding-large large margin-top" style="position:relative;left:10vw;top:45vh;">Learn more</a>
+                    <a href="#contact" class="button1 blue padding-large large margin-top" style="position:relative;left:60vw;top:45vh">Contact Now</a>
                 </p>
             </center>
-            <div class="arrow bounce" style="position: relative; left: 68vh;top:52vh;">
+            <div class="arrow bounce" style="position: relative; left: 70vh;top:62vh;">
                 <a class="fa fa-arrow-down fa-2x"></a>
             </div>
             <section class="wrapper">
-                <h1 style="color:white;position: relative; left: 81vh;bottom:2vh;" class="sentence"> We
+                <h1 style="color:white;position: relative; left: 85vh;top:5vh;" class="sentence"> We
                     <div class="slidingVertical">
-                        <span>create.</span>
                         <span>design.</span>
                         <span>develop.</span>
+                        <span>manage.</span>
                     </div>
                 </h1>
+                <h1 style="color:white;position: relative; left: 67vh;top:5vh;" class="sentence">You </h1>
+                <h1 style="color:#dedede;position: relative; left: 77vh;bottom:5.38vh;" class="sentence">get what you came for.</h1>
             </section>
         </div>
     </header>
@@ -447,30 +468,55 @@
         <div class="row-padding">
             <div class="">
                 <center>
-                    <h3 class="button1 blue padding-large large margin-top" style="font-size:5vh;font-weight:bold;position: relative;bottom:5vh;">WHAT WE DO</h3>
-                    <p style="position: relative;bottom:5vh;font-size:3vh;">Helping local businesses grow by building websites and managing social media platforms.
+                    <h3 class="titlecard" style="font-size:5vh;font-weight:bold;position: relative;bottom:8vh;">WHAT WE DO</h3>
+                    <p style="position: relative;top:0vh;font-size:3vh;">Helping local businesses grow by building websites and managing social media platforms.
                     </p>
                 </center>
-                <p style="position: relative;left:8vh;top:4vh;font-size:3.1vh;">
-                    WE develop the Website, Powered by AI.<br>
-                    WE take care of the Website Management.<br>
-                    WE provide the Professional Email with YOUR own Domain.<br>
-                    WE setup the Database Mapping.<br>
-                    WE provide the DDOS Protection.<br>
-                    WE manage the Social Media platforms.
-                </p>
-            </div>
-            <div class="col m6">
-                <img style="width:87%;position: relative; left: 110vh;bottom:45vh;" class="image round-large" src="static/images/datascience.gif" alt="datascience">
+
+                <div class="column" style="position: relative;top:10vh;left:10vh;">
+                    <div class="aboutcard">
+                        <div class="container">
+                            <center><h3 style="position: relative;bottom:2vh;font-size:3vh;">Website Development</h3></center>
+                        </div>
+                    </div>
+                </div>
+                <div class="column" style="position: relative;top:30vh;right:20vh;">
+                    <div class="aboutcard">
+                        <div class="container">
+                            <center><h3 style="position: relative;bottom:2vh;font-size:3vh;">Professional Email</h3></center>
+                        </div>
+                    </div>
+                </div>
+                <div class="column" style="position: relative;top:0-vh;right:50vh;">
+                    <div class="aboutcard">
+                        <div class="container">
+                            <center><h3 style="position: relative;font-size:3vh;">DDOS Protection</h3></center>
+                        </div>
+                    </div>
+                </div>
+                <div class="column" style="position: relative;bottom:2.5vh;left:120vh;">
+                    <div class="aboutcard">
+                        <div class="container">
+                            <center><h3 style="position: relative;bottom:2vh;font-size:3vh;">Database Mapping</h3></center>
+                        </div>
+                    </div>
+                </div>
+                <div class="column" style="position: relative;bottom:22.5vh;left:92vh;">
+                    <div class="aboutcard">
+                        <div class="container">
+                            <center><h3 style="position: relative;bottom:4.5vh;font-size:3vh;">Website and Social Media Management</h3></center>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- WEB DEVELOPMENT -->
     <div class="container" id="webdev">
-        <div class="container vertical-center">
+        <div class="container vertical-center" style="position:relative;top:45vh;">
             <center>
-                <h2 style="font-weight:bold;font-size:16vh;position: relative;bottom:30vh;">WEB DEVELOPMENT</h2>
+                <h2 style="font-weight:bold;font-size:16vh;position: relative;bottom:30vh;">SITE BUILD</h2>
                 <p style="font-size:3vh;position: relative;bottom:30vh;">
 
                 </p>
@@ -506,7 +552,7 @@
                         <div class="container">
                             <h3 style="position: relative;bottom:8vh;">Security</h3>
                             <center> <img src="static/images/manageIcon.png" alt="Sid" style="position: relative;bottom:8vh;width:30%"> </center>
-                            <p style="position: relative;bottom:8vh;padding:3vh;">We take care of the DDOs, database mapping, and management so you don't.</p>
+                            <p style="position: relative;bottom:8vh;padding:3vh;">We take care of the DDOS, database mapping, and management so you don't.</p>
                         </div>
                     </div>
                 </div>
@@ -519,15 +565,16 @@
         <div class="container vertical-center">
             <center>
                 <h2 style="font-weight:bold;font-size:16vh;position: relative;bottom:1vh;">SOCIAL MEDIA</h2>
-                <img src="static/images/instaIcon.png" alt="instagram" style="width:20%;position: relative;bottom:0vh;right:1vh;">
-                <img src="static/images/linkedinicon.png" alt="linkedin" style="width:20%;position: relative;bottom:10vh;right:1vh;">
-                <img src="static/images/twitIcon.png" alt="twitter" style="width:20%;position: relative;bottom:10vh;right:1vh;">
-                <img src="static/images/facebookIcon.png" alt="facebook" style="width:20%;position: relative;bottom:0vh;right:1vh;">
-                <div class="column" style="position: relative;bottom:15vh;left:53.7vh;">
+                <img src="static/images/instaIcon.png" alt="instagram" style="width:20%;position: relative;top:40vh;right:1vh;">
+                <img src="static/images/linkedinicon.png" alt="linkedin" style="width:20%;position: relative;top:50vh;right:1vh;">
+                <img src="static/images/twitIcon.png" alt="twitter" style="width:20%;position: relative;top:50vh;right:1vh;">
+                <img src="static/images/facebookIcon.png" alt="facebook" style="width:20%;position: relative;top:40vh;right:1vh;">
+                <div class="column" style="position: relative;bottom:35vh;left:53.7vh;">
                     <div class="socialcard">
                         <div class="container">
                             <h3 style="position: relative;bottom:8vh;">We Got This</h3>
-                            <p style="position: relative;bottom:12vh;padding:3vh;">Stand back and handle the other responsibilites in your business while we manage your social media platforms creating an easier way to interact with customers with no effort being wasted. </p>
+                            <p style="position: relative;bottom:12vh;padding:3vh;">Stand back and handle the other responsibilites in your business while we manage your social media platforms creating an easier way to interact with customers with no
+                                effort being wasted. </p>
                         </div>
                     </div>
                 </div>
@@ -540,13 +587,13 @@
 
     <div id="team" style="padding-top: 10vh">
         <center>
-            <h3 class="button1 blue padding-large large margin-top" style="font-weight:bold;">
+            <h3 class="titlecard" style="font-weight:bold;font-size:5vh;">
                 OUR TEAM
             </h3>
         </center>
         <center>
             <div class="row">
-                <div class="column" style="padding-top: 10vh;">
+                <div class="column" style="padding-top: 20vh;">
                     <div class="teamcard" style="position:relative;bottom:5vh;" onclick="location.href='/pranav';">
                         <center> <img src="static/images/pranavPic.jpg" alt="Pranav" style="border-radius: 2vh;width:50%"></center>
                         <div class="container">
@@ -557,8 +604,8 @@
                     </div>
                 </div>
 
-                <div class="column" style="padding-top: 10vh;">
-                    <div class="teamcard" style="position:relative;bottom:5vh;"onclick="location.href='/sid';">
+                <div class="column" style="padding-top: 20vh;">
+                    <div class="teamcard" style="position:relative;bottom:5vh;" onclick="location.href='/sid';">
                         <center> <img src="static/images/sidPic.jpg" alt="Sid" style="border-radius: 2vh;width:50%"> </center>
                         <div class="container">
                             <h3>Sid Rapolu</h3>
@@ -567,7 +614,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="column" style="padding-top: 10vh;">
+                <div class="column" style="padding-top: 20vh;">
                     <div class="teamcard" style="position:relative;bottom:5vh;" onclick="location.href='/haneef';">
                         <center><img src="static/images/haneefPic.jpeg" alt="Haneef" style="border-radius: 2vh;width:50%;"></center>
                         <div class="container">
