--- a/templates/home.html
+++ b/templates/home.html
@@ -616,7 +616,7 @@
                 </div>
                 <div class="column" style="padding-top: 20vh;">
                     <div class="teamcard" style="position:relative;bottom:5vh;" onclick="location.href='/haneef';">
-                        <center><img src="static/images/haneefPic.jpeg" alt="Haneef" style="border-radius: 2vh;width:50%;"></center>
+                        <center><img src="static/images/haneefPic.JPEG" alt="Haneef" style="border-radius: 2vh;width:50%;"></center>
                         <div class="container">
                             <h3>Haneef Khan</h3>
                             <p class="title" style="font-size:3vh;">Data Engineer</p>
