--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
 
 <header id="home">
 
-<div class="bg-img" style="background-image: url('./img/background1.jpg');">
+<div class="bg-img" style="background-image: url('../static/images/background1.jpg');">
 <div class="overlay"></div>
 </div>
 
