--- a/static/css/mstyle.css
+++ b/static/css/mstyle.css
@@ -35,7 +35,7 @@ h5 {
 }
 
 a {
-    color: #6195ff;
+    color: #45ffca;
     text-decoration: none;
     -webkit-transition: .2s opacity;
     transition: .2s opacity
@@ -45,11 +45,11 @@ a:hover, a:focus {
     text-decoration: none;
     outline: none;
     opacity: .8;
-    color: #6195ff
+    color: #45ffca
 }
 
 .main-color {
-    color: #6195ff
+    color: #45ffca
 }
 
 .white-text {
@@ -57,12 +57,12 @@ a:hover, a:focus {
 }
 
 ::-moz-selection {
-    background-color: #6195ff;
+    background-color: #45ffca;
     color: #fff
 }
 
 ::selection {
-    background-color: #6195ff;
+    background-color: #45ffca;
     color: #fff
 }
 
@@ -132,7 +132,7 @@ ul, ol {
     display: block;
     height: 4px;
     width: 40px;
-    background-color: #6195ff;
+    background-color: #45ffca;
     margin-top: 20px
 }
 
@@ -160,7 +160,7 @@ textarea {
 }
 
 input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, input[type=number]:focus, input[type=date]:focus, input[type=url]:focus, input[type=tel]:focus, textarea:focus {
-    border-color: #6195ff;
+    border-color: #45ffca;
     opacity: 1
 }
 
@@ -175,7 +175,7 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, inp
 }
 
 .main-btn {
-    background: #6195ff;
+    background: #45ffca;
     color: #fff
 }
 
@@ -186,8 +186,8 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, inp
 
 .outline-btn {
     background: 0 0;
-    color: #6195ff !important;
-    border-color: #6195ff
+    color: #45ffca !important;
+    border-color: #45ffca
 }
 
 .main-btn:hover, .white-btn:hover, .outline-btn:hover {
@@ -274,13 +274,13 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, inp
 
     .main-nav>li>a:hover, .main-nav>li>a:focus, .main-nav>li.active>a {
         background: 0 0;
-        color: #6195ff
+        color: #45ffca
     }
 
     .main-nav>li>a:after {
         content: "";
         display: block;
-        background-color: #6195ff;
+        background-color: #45ffca;
         height: 2px;
         width: 0%;
         -webkit-transition: .2s width;
@@ -312,7 +312,7 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, inp
         position: absolute;
         right: -50%;
         top: 0;
-        background-color: #6195ff;
+        background-color: #45ffca;
         width: 200px;
         -webkit-box-shadow: 0 5px 5px -5px rgba(53, 64, 82, .2);
         box-shadow: 0 5px 5px -5px rgba(53, 64, 82, .2);
@@ -410,11 +410,11 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, inp
     }
 
     .main-nav>li.active {
-        border-left: 6px solid #6195ff
+        border-left: 6px solid #45ffca
     }
 
     .main-nav li a:hover, .main-nav li a:focus {
-        background-color: #6195ff;
+        background-color: #45ffca;
         color: #fff;
         opacity: 1
     }
@@ -573,7 +573,7 @@ header {
 
 .about i {
     font-size: 36px;
-    color: #6195ff;
+    color: #45ffca;
     margin-bottom: 20px
 }
 
@@ -672,7 +672,7 @@ header {
     -ms-transform: translateY(100%);
     transform: translateY(100%);
     opacity: 0;
-    color: #6195ff;
+    color: #45ffca;
     margin-bottom: 5px;
     -webkit-transition: .2s all;
     transition: .2s all;
@@ -701,7 +701,7 @@ header {
     display: inline-block;
     width: 50px;
     height: 50px;
-    background-color: #6195ff;
+    background-color: #45ffca;
     color: #fff;
     line-height: 50px;
     text-align: center
@@ -718,6 +718,7 @@ header {
     padding: 40px 20px 40px 70px;
     margin: 15px 0;
     border: 1px solid #eee
+    border-radius:
 }
 
 .service i {
@@ -725,7 +726,7 @@ header {
     left: 20px;
     text-align: center;
     font-size: 32px;
-    color: #6195ff;
+    color: #45ffca;
     border-radius: 50%
 }
 
@@ -763,8 +764,8 @@ header {
     float: left;
     padding: 5px;
     border-radius: 50%;
-    color: #6195ff;
-    border: 1px solid #6195ff;
+    color: #45ffca;
+    border: 1px solid #45ffca;
     margin-right: 5px
 }
 
@@ -774,7 +775,7 @@ header {
 }
 
 .number i {
-    color: #6195ff;
+    color: #45ffca;
     font-size: 36px;
     margin-bottom: 20px
 }
@@ -824,7 +825,7 @@ header {
 }
 
 .pricing:hover .price-title {
-    color: #6195ff
+    color: #45ffca
 }
 
 .pricing .price {
@@ -835,7 +836,7 @@ header {
     text-align: center;
     margin: auto;
     border-radius: 50%;
-    border: 2px solid #6195ff
+    border: 2px solid #45ffca
 }
 
 .pricing .price h3 {
@@ -901,7 +902,7 @@ header {
 
 .testimonial span {
     font-size: 14px;
-    color: #6195ff;
+    color: #45ffca;
     text-transform: uppercase
 }
 
@@ -979,7 +980,7 @@ header {
 }
 
 .team:hover .team-content span {
-    color: #6195ff
+    color: #45ffca
 }
 
 .team .team-social {
@@ -996,7 +997,7 @@ header {
     line-height: 50px;
     width: 50px;
     text-align: center;
-    background-color: #6195ff;
+    background-color: #45ffca;
     color: #fff
 }
 
@@ -1025,7 +1026,7 @@ header {
 }
 
 .blog .blog-meta li i {
-    color: #6195ff;
+    color: #45ffca;
     margin-right: 5px
 }
 
@@ -1057,12 +1058,12 @@ header {
 
 .blog-tags a:hover {
     color: #fff;
-    background-color: #6195ff
+    background-color: #45ffca
 }
 
 .blog-tags a i {
     margin-right: 3px;
-    color: #6195ff
+    color: #45ffca
 }
 
 .blog-tags a:hover i {
@@ -1107,7 +1108,7 @@ header {
     border-radius: 3px;
     margin-left: 5px;
     color: #fff;
-    background-color: #6195ff
+    background-color: #45ffca
 }
 
 .blog-comments {
@@ -1158,12 +1159,12 @@ header {
 
 .blog-comments .media.author {
     background-color: #f4f4f4;
-    border-color: #6195ff;
-    border-bottom: 1px solid #6195ff
+    border-color: #45ffca;
+    border-bottom: 1px solid #45ffca
 }
 
 .blog-comments .media.author>.media-body>.media-heading {
-    color: #6195ff
+    color: #45ffca
 }
 
 .blog-comments .media.author+.media {
@@ -1212,7 +1213,7 @@ header {
     border: none;
     line-height: 40px;
     background-color: transparent;
-    color: #6195ff
+    color: #45ffca
 }
 
 .widget-category a {
@@ -1229,11 +1230,11 @@ header {
 
 .widget-category a span {
     float: right;
-    color: #6195ff
+    color: #45ffca
 }
 
 .widget-category a:hover {
-    color: #6195ff
+    color: #45ffca
 }
 
 .widget-tags a {
@@ -1247,7 +1248,7 @@ header {
 
 .widget-tags a:hover {
     color: #fff;
-    background-color: #6195ff
+    background-color: #45ffca
 }
 
 .widget-post {
@@ -1268,7 +1269,7 @@ header {
 }
 
 .widget-post a:hover {
-    color: #6195ff
+    color: #45ffca
 }
 
 .widget-post .blog-meta {
@@ -1278,12 +1279,12 @@ header {
 .widget-post .blog-meta li {
     display: inline-block;
     margin-right: 5px;
-    color: #6195ff;
+    color: #45ffca;
     font-size: 12px
 }
 
 .widget-post li i {
-    color: #6195ff;
+    color: #45ffca;
     margin-right: 5px
 }
 
@@ -1294,7 +1295,7 @@ header {
 
 .contact i {
     font-size: 36px;
-    color: #6195ff;
+    color: #45ffca;
     margin-bottom: 20px
 }
 
@@ -1346,7 +1347,7 @@ header {
     line-height: 50px;
     text-align: center;
     border-radius: 3px;
-    background-color: #6195ff;
+    background-color: #45ffca;
     color: #fff
 }
 
@@ -1442,11 +1443,11 @@ header {
 }
 
 .owl-theme .owl-dots .owl-dot:hover span {
-    background: #6195ff
+    background: #45ffca
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
-    background: #6195ff;
+    background: #45ffca;
     width: 20px
 }
 
@@ -1466,7 +1467,7 @@ header {
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    background: #6195ff;
+    background: #45ffca;
     color: #fff;
     padding: 0;
     width: 50px;
@@ -1486,7 +1487,7 @@ header {
 
 .owl-theme .owl-nav [class*=owl-]:hover {
     opacity: .8;
-    background: #6195ff
+    background: #45ffca
 }
 
 #back-to-top {
@@ -1498,7 +1499,7 @@ header {
     height: 50px;
     line-height: 50px;
     text-align: center;
-    background: #6195ff;
+    background: #45ffca;
     border-radius: 3px;
     color: #fff;
     z-index: 9999;
@@ -1537,7 +1538,7 @@ header {
 
 .preloader span {
     display: inline-block;
-    background-color: #6195ff;
+    background-color: #45ffca;
     width: 25px;
     height: 25px;
     -webkit-animation: 1s preload ease-in-out infinite;
