--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="http://example.com/favicon.png">
+    <link rel="icon" href="../static/images/tabIcon3.png">
     <title>Laire</title>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
@@ -42,8 +42,8 @@
 
                     <div class="navbar-brand">
                         <a href="index.html">
-                            <img class="logo" src="img/logo.png" alt="logo">
-                            <img class="logo-alt" src="img/logo-alt.png" alt="logo">
+                            <img class="logo" src="../static/images/newLogo.png" alt="logo">
+                            <img class="logo-alt" src="../static/images/newLogo.png" alt="logo">
                         </a>
                     </div>
 
@@ -251,15 +251,15 @@
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title">What we offer</h2>
+                    <h2 class="title">What We Do</h2>
                 </div>
 
 
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-diamond"></i>
-                        <h3>App Development</h3>
-                        <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
+                        <h3>Fully Personalized</h3>
+                        <p>Professional and personal using NO templates and aupport for a wide variety of  websites.</p>
                     </div>
                 </div>
 
@@ -267,7 +267,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-rocket"></i>
-                        <h3>Graphic Design</h3>
+                        <h3>Professional Email</h3>
                         <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
                     </div>
                 </div>
@@ -276,7 +276,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-cogs"></i>
-                        <h3>Creative Idea</h3>
+                        <h3>Security</h3>
                         <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
                     </div>
                 </div>
@@ -285,8 +285,8 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-diamond"></i>
-                        <h3>Marketing</h3>
-                        <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
+                        <h3>Search Engine Optimization</h3>
+                        <p>Our SEO algorithm ensures more traffic and popularity for your site.</p>
                     </div>
                 </div>
 
@@ -294,7 +294,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-pencil"></i>
-                        <h3>Awesome Support</h3>
+                        <h3>Unique Content Model</h3>
                         <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-flask"></i>
-                        <h3>Brand Design</h3>
+                        <h3>Digital Marketing</h3>
                         <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
                     </div>
                 </div>
