--- a/static/css/mstyle.css
+++ b/static/css/mstyle.css
@@ -1,5 +1,5 @@
 body {
-    font-family: varela round, sans-serif;
+    font-family: 'Assistant', sans-serif;
     font-size: 16px;
     line-height: 1.6;
     overflow-x: hidden;
