--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../static/images/tabIcon3.png">
     <title>Laire</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
+    <<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
 
     <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css">
 
@@ -27,11 +27,43 @@
 	<![endif]-->
 </head>
 
+<style>
+    .arrow {
+        text-align: center;
+        margin: 8% 0;
+    }
+
+    .bounce {
+        -moz-animation: bounce 2s infinite;
+        -webkit-animation: bounce 2s infinite;
+        animation: bounce 2s infinite;
+    }
+
+    @keyframes bounce {
+
+        0%,
+        20%,
+        50%,
+        80%,
+        100% {
+            transform: translateY(0);
+        }
+
+        40% {
+            transform: translateY(-30px);
+        }
+
+        60% {
+            transform: translateY(-15px);
+        }
+    }
+</style>
+
 <body>
 
     <header id="home">
 
-        <div class="bg-img" style="background-image: url('../static/images/background1.jpg');">
+        <div class="bg-img" style="background-image: url('../static/images/background4.jpg');">
             <div class="overlay"></div>
         </div>
 
@@ -78,17 +110,21 @@
                 <div class="row">
 
                     <div class="col-md-10 col-md-offset-1">
-                        <div class="home-content">
+                        <div class="home-content" style="position:relative;top:12vh;">
                             <center>
                                 <img class="img-responsive" src="../static/images/newLogo.png" alt="laireLogo">
                             </center>
                             <p class="white-text">Morbi mattis felis at nunc. Duis viverra diam non justo. In nisl. Nullam sit amet magna in magna gravida vehicula. Mauris tincidunt sem sed arcu. Nunc posuere.
                             </p>
-                            <button class="white-btn">Get Started!</button>
-                            <button class="main-btn">Learn more</button>
+                            <button class="white-btn" style="color:#4a505c;">Get Started!</button>
+                            <button class="main-btn" style="color:#4a505c;">Learn more</button>
+                            <center>
+                                <div class="arrow bounce" style="position:relative;top:9vh;">
+                                    <a class="fa fa-arrow-down fa-2x" href="#"></a>
+                                </div>
+                            </center>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -112,7 +148,7 @@
                         <i class="fa fa-cogs"></i>
                         <h3>Fully Customizible</h3>
                         <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-                        <a href="#">Read more</a>
+                        <a href="#" style="color: black">Read more</a>
                     </div>
                 </div>
 
@@ -122,7 +158,7 @@
                         <i class="fa fa-magic"></i>
                         <h3>Awesome Features</h3>
                         <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-                        <a href="#">Read more</a>
+                        <a href="#" style="color: black">Read more</a>
                     </div>
                 </div>
 
@@ -132,7 +168,7 @@
                         <i class="fa fa-mobile"></i>
                         <h3>Fully Responsive</h3>
                         <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-                        <a href="#">Read more</a>
+                        <a href="#" style="color: black">Read more</a>
                     </div>
                 </div>
 
@@ -259,7 +295,7 @@
                     <div class="service">
                         <i class="fa fa-diamond"></i>
                         <h3>Fully Personalized</h3>
-                        <p>Professional and personal using NO templates and aupport for a wide variety of  websites.</p>
+                        <p>Professional and personal using NO templates and aupport for a wide variety of websites.</p>
                     </div>
                 </div>
 
@@ -385,7 +421,7 @@
 
     <div id="numbers" class="section sm-padding">
 
-        <div class="bg-img" style="background-image: url('./img/background2.jpg');">
+        <div class="bg-img" style="background-image: url('../static/images/background4.jpg');">
             <div class="overlay"></div>
         </div>
 
