--- a/static/css/mstyle.css
+++ b/static/css/mstyle.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Assistant', sans-serif;
+    font-family: 'Palanquin', sans-serif;
     font-size: 16px;
     line-height: 1.6;
     overflow-x: hidden;
@@ -7,7 +7,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: montserrat, sans-serif;
+    font-family: 'Palanquin', sans-serif;
     font-weight: 700;
     margin-top: 0;
     margin-bottom: 20px;
