--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../static/images/tabIcon3.png">
     <title>Laire</title>
 
-    <<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Palanquin:700&display=swap" rel="stylesheet">
 
     <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css">
 
@@ -57,6 +57,11 @@
             transform: translateY(-15px);
         }
     }
+
+    .card{
+        border-radius: 10vh;
+    }
+
 </style>
 
 <body>
@@ -89,16 +94,14 @@
                 <ul class="main-nav nav navbar-nav navbar-right">
                     <li class="active"><a href="#home">Home</a></li>
                     <li class=""><a href="#about">About</a></li>
-                    <li class=""><a href="#portfolio">Portfolio</a></li>
                     <li class=""><a href="#service">Services</a></li>
+                    <li class=""><a href="#portfolio">Portfolio</a></li>
                     <li class=""><a href="#pricing">Prices</a></li>
-                    <li class=""><a href="#team">Team</a></li>
-                    <li class="has-dropdown"><a href="#blog">Blog</a>
-                        <ul class="dropdown">
-                            <li><a href="blog-single.html">blog post</a></li>
+                    <li class="has-dropdown"><a href="#contact">Contact</a>
+                        <ul class="dropdown" style="border-radius:5vh;">
+                            <li><a href="#team" style="color:black;">Our Team</a></li>
                         </ul>
                     </li>
-                    <li class=""><a href="#contact">Contact</a></li>
                 </ul>
 
             </div>
@@ -116,8 +119,8 @@
                             </center>
                             <p class="white-text">Morbi mattis felis at nunc. Duis viverra diam non justo. In nisl. Nullam sit amet magna in magna gravida vehicula. Mauris tincidunt sem sed arcu. Nunc posuere.
                             </p>
-                            <button class="white-btn" style="color:#4a505c;">Get Started!</button>
-                            <button class="main-btn" style="color:#4a505c;">Learn more</button>
+                            <button class="white-btn" style="color:#4a505c; border-radius:1vh;">Get Started!</button>
+                            <button class="main-btn" style="color:#4a505c; border-radius:1vh;">Learn more</button>
                             <center>
                                 <div class="arrow bounce" style="position:relative;top:9vh;">
                                     <a class="fa fa-arrow-down fa-2x" href="#"></a>
@@ -139,16 +142,16 @@
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title">Welcome to Website</h2>
+                    <h2 class="title" style="color:#5d606b;">About</h2>
                 </div>
 
 
                 <div class="col-md-4">
                     <div class="about">
                         <i class="fa fa-cogs"></i>
-                        <h3>Fully Customizible</h3>
-                        <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-                        <a href="#" style="color: black">Read more</a>
+                        <h3>Web Development</h3>
+                        <p style="color: #aeb3c2">Every website is built with you in mind. Each website is tailored to fit what your needs. </p>
+                        <a href="#service" style="color: #5d606b">Read more</a>
                     </div>
                 </div>
 
@@ -156,9 +159,9 @@
                 <div class="col-md-4">
                     <div class="about">
                         <i class="fa fa-magic"></i>
-                        <h3>Awesome Features</h3>
-                        <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-                        <a href="#" style="color: black">Read more</a>
+                        <h3>Server Management</h3>
+                        <p style="color: #aeb3c2">We make sure your website is running at all times and you don't even need to care.</p>
+                        <a href="#service" style="color: #5d606b">Read more</a>
                     </div>
                 </div>
 
@@ -166,9 +169,9 @@
                 <div class="col-md-4">
                     <div class="about">
                         <i class="fa fa-mobile"></i>
-                        <h3>Fully Responsive</h3>
-                        <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-                        <a href="#" style="color: black">Read more</a>
+                        <h3>Social Media</h3>
+                        <p style="color: #aeb3c2">We manage your social media platforms and keep growth, popularity, and traffic on radar.</p>
+                        <a href="#service" style="color: #5d606b">Read more</a>
                     </div>
                 </div>
 
@@ -177,108 +180,6 @@
         </div>
 
     </div>
-
-
-    <div id="portfolio" class="section md-padding bg-grey">
-
-        <div class="container">
-
-            <div class="row">
-
-                <div class="section-header text-center">
-                    <h2 class="title">Featured Works</h2>
-                </div>
-
-
-                <div class="col-md-4 col-xs-6 work">
-                    <img class="img-responsive" src="./img/work1.jpg" alt="">
-                    <div class="overlay"></div>
-                    <div class="work-content">
-                        <span>Category</span>
-                        <h3>Lorem ipsum dolor</h3>
-                        <div class="work-link">
-                            <a href="#"><i class="fa fa-external-link"></i></a>
-                            <a class="lightbox" href="./img/work1.jpg"><i class="fa fa-search"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-md-4 col-xs-6 work">
-                    <img class="img-responsive" src="./img/work2.jpg" alt="">
-                    <div class="overlay"></div>
-                    <div class="work-content">
-                        <span>Category</span>
-                        <h3>Lorem ipsum dolor</h3>
-                        <div class="work-link">
-                            <a href="#"><i class="fa fa-external-link"></i></a>
-                            <a class="lightbox" href="./img/work2.jpg"><i class="fa fa-search"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-md-4 col-xs-6 work">
-                    <img class="img-responsive" src="./img/work3.jpg" alt="">
-                    <div class="overlay"></div>
-                    <div class="work-content">
-                        <span>Category</span>
-                        <h3>Lorem ipsum dolor</h3>
-                        <div class="work-link">
-                            <a href="#"><i class="fa fa-external-link"></i></a>
-                            <a class="lightbox" href="./img/work3.jpg"><i class="fa fa-search"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-md-4 col-xs-6 work">
-                    <img class="img-responsive" src="./img/work4.jpg" alt="">
-                    <div class="overlay"></div>
-                    <div class="work-content">
-                        <span>Category</span>
-                        <h3>Lorem ipsum dolor</h3>
-                        <div class="work-link">
-                            <a href="#"><i class="fa fa-external-link"></i></a>
-                            <a class="lightbox" href="./img/work4.jpg"><i class="fa fa-search"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-md-4 col-xs-6 work">
-                    <img class="img-responsive" src="./img/work5.jpg" alt="">
-                    <div class="overlay"></div>
-                    <div class="work-content">
-                        <span>Category</span>
-                        <h3>Lorem ipsum dolor</h3>
-                        <div class="work-link">
-                            <a href="#"><i class="fa fa-external-link"></i></a>
-                            <a class="lightbox" href="./img/work5.jpg"><i class="fa fa-search"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-md-4 col-xs-6 work">
-                    <img class="img-responsive" src="./img/work6.jpg" alt="">
-                    <div class="overlay"></div>
-                    <div class="work-content">
-                        <span>Category</span>
-                        <h3>Lorem ipsum dolor</h3>
-                        <div class="work-link">
-                            <a href="#"><i class="fa fa-external-link"></i></a>
-                            <a class="lightbox" href="./img/work6.jpg"><i class="fa fa-search"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-
 
     <div id="service" class="section md-padding">
 
@@ -350,6 +251,63 @@
 
     </div>
 
+    <div id="portfolio" class="section md-padding bg-grey">
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="section-header text-center">
+                    <h2 class="title">Featured Works</h2>
+                </div>
+
+
+                <div class="col-md-4 col-xs-6 work">
+                    <img class="img-responsive" src="./img/work1.jpg" alt="">
+                    <div class="overlay"></div>
+                    <div class="work-content">
+                        <span>Category</span>
+                        <h3>Lorem ipsum dolor</h3>
+                        <div class="work-link">
+                            <a href="#"><i class="fa fa-external-link"></i></a>
+                            <a class="lightbox" href="./img/work1.jpg"><i class="fa fa-search"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-md-4 col-xs-6 work">
+                    <img class="img-responsive" src="./img/work2.jpg" alt="">
+                    <div class="overlay"></div>
+                    <div class="work-content">
+                        <span>Category</span>
+                        <h3>Lorem ipsum dolor</h3>
+                        <div class="work-link">
+                            <a href="#"><i class="fa fa-external-link"></i></a>
+                            <a class="lightbox" href="./img/work2.jpg"><i class="fa fa-search"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-md-4 col-xs-6 work">
+                    <img class="img-responsive" src="./img/work3.jpg" alt="">
+                    <div class="overlay"></div>
+                    <div class="work-content">
+                        <span>Category</span>
+                        <h3>Lorem ipsum dolor</h3>
+                        <div class="work-link">
+                            <a href="#"><i class="fa fa-external-link"></i></a>
+                            <a class="lightbox" href="./img/work3.jpg"><i class="fa fa-search"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
 
     <div id="features" class="section md-padding bg-grey">
 
@@ -743,81 +701,6 @@
         </div>
 
     </div>
-
-
-    <div id="blog" class="section md-padding bg-grey">
-
-        <div class="container">
-
-            <div class="row">
-
-                <div class="section-header text-center">
-                    <h2 class="title">Recents news</h2>
-                </div>
-
-
-                <div class="col-md-4">
-                    <div class="blog">
-                        <div class="blog-img">
-                            <img class="img-responsive" src="./img/blog1.jpg" alt="">
-                        </div>
-                        <div class="blog-content">
-                            <ul class="blog-meta">
-                                <li><i class="fa fa-user"></i>John doe</li>
-                                <li><i class="fa fa-clock-o"></i>18 Oct</li>
-                                <li><i class="fa fa-comments"></i>57</li>
-                            </ul>
-                            <h3>Molestie at elementum eu facilisis sed odio</h3>
-                            <p>Nec feugiat nisl pretium fusce id velit ut tortor pretium. Nisl purus in mollis nunc sed. Nunc non blandit massa enim nec.</p>
-                            <a href="blog-single.html">Read more</a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-md-4">
-                    <div class="blog">
-                        <div class="blog-img">
-                            <img class="img-responsive" src="./img/blog2.jpg" alt="">
-                        </div>
-                        <div class="blog-content">
-                            <ul class="blog-meta">
-                                <li><i class="fa fa-user"></i>John doe</li>
-                                <li><i class="fa fa-clock-o"></i>18 Oct</li>
-                                <li><i class="fa fa-comments"></i>57</li>
-                            </ul>
-                            <h3>Molestie at elementum eu facilisis sed odio</h3>
-                            <p>Nec feugiat nisl pretium fusce id velit ut tortor pretium. Nisl purus in mollis nunc sed. Nunc non blandit massa enim nec.</p>
-                            <a href="blog-single.html">Read more</a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-md-4">
-                    <div class="blog">
-                        <div class="blog-img">
-                            <img class="img-responsive" src="./img/blog3.jpg" alt="">
-                        </div>
-                        <div class="blog-content">
-                            <ul class="blog-meta">
-                                <li><i class="fa fa-user"></i>John doe</li>
-                                <li><i class="fa fa-clock-o"></i>18 Oct</li>
-                                <li><i class="fa fa-comments"></i>57</li>
-                            </ul>
-                            <h3>Molestie at elementum eu facilisis sed odio</h3>
-                            <p>Nec feugiat nisl pretium fusce id velit ut tortor pretium. Nisl purus in mollis nunc sed. Nunc non blandit massa enim nec.</p>
-                            <a href="blog-single.html">Read more</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-
 
     <div id="contact" class="section md-padding">
 
