--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,7 @@
     <link type="text/css" rel="stylesheet" href="../static/css/owl.theme.default.css">
 
     <link type="text/css" rel="stylesheet" href="../static/css/magnific-popup.css">
-
-    <link rel="stylesheet" href="../static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link type="text/css" rel="stylesheet" href="../static/css/mstyle.css">
 
@@ -804,11 +803,11 @@
     </div>
 
 
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="js/jquery.magnific-popup.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="../static/js/jquery.min.js"></script>
+    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../static/js/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="../static/js/jquery.magnific-popup.js"></script>
+    <script type="text/javascript" src="../static/js/main.js"></script>
 
 
 </body>
