--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../static/images/tabIcon3.png">
+    <link rel="icon" href="../static/images/tabIcon.png">
     <title>Laire</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Palanquin:700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
     <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css">
 
