--- a/templates/home.html
+++ b/templates/home.html
@@ -597,9 +597,9 @@
 
                 <div class="col-sm-6">
                     <div class="contact">
-                        <i class="fa fa-phone"></i>
-                        <h3>Phone</h3>
-                        <p>703-996-6656</p>
+                        <i class="fa fa-instagram"></i>
+                        <h3>Instagram</h3>
+                        <p>@officiallaire</p>
                     </div>
                 </div>
 
@@ -619,7 +619,7 @@
                         <input type="email" class="input" placeholder="Email">
                         <input type="text" class="input" placeholder="Subject">
                         <textarea class="input" placeholder="Message"></textarea>
-                        <button class="main-btn">Send message</button>
+                        <button class="main-btn" style="color:black;">Send message</button>
                     </form>
                 </div>
 
@@ -638,22 +638,19 @@
                 <div class="col-md-12">
 
                     <div class="footer-logo">
-                        <a href="index.html"><img src="img/logo-alt.png" alt="logo"></a>
+                        <a href="index.html"><img src="../static/images/laireLogoHead.png" alt="logo"></a>
                     </div>
 
 
                     <ul class="footer-follow">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="https://www.instagram.com/officiallaire/"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/officiallaire/?eid=ARBTzOHdAZUwJ6nhodFXlsKrNmvDH4GT_MVqOiaDIUmuTc0rUuJFKw4gTweODnZi-PjquCaLCMDoJ7zf"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/laire-llc/about/?viewAsMember=true"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
 
 
                     <div class="footer-copyright">
-                        <p>Copyright © 2017. All Rights Reserved. Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+                        <p>Copyright © 2019 Laire. All Rights Reserved.</p>
                     </div>
 
                 </div>
