--- a/static/css/mstyle.css
+++ b/static/css/mstyle.css
@@ -1,7 +1,7 @@
 
 
 body {
-    font-family: 'Palanquin', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.6;
     overflow-x: hidden;
@@ -9,7 +9,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Palanquin', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     margin-top: 0;
     margin-bottom: 20px;
@@ -719,8 +719,8 @@ header {
     position: relative;
     padding: 40px 20px 40px 70px;
     margin: 15px 0;
-    border: 1px solid #eee
-    border-radius:
+    border: 1px solid #eee;
+    margin: 15px 0
 }
 
 .service i {
@@ -729,7 +729,6 @@ header {
     text-align: center;
     font-size: 32px;
     color: #45ffca;
-    border-radius: 50%
 }
 
 .service:after {
@@ -1502,7 +1501,7 @@ header {
     line-height: 50px;
     text-align: center;
     background: #45ffca;
-    border-radius: 3px;
+    border-radius: 50vh;
     color: #fff;
     z-index: 9999;
     -webkit-transition: .2s opacity;
