--- a/templates/home.html
+++ b/templates/home.html
@@ -116,8 +116,10 @@
                                 <img class="img-responsive" src="../static/images/laireLogoHead.png" alt="laireLogo">
                             </center>
                             <p class="white-text"></p>
-                            <button class="white-btn" style="color:#4a505c; border-radius:1vh;">Get Started!</button>
-                            <button class="main-btn" style="color:#4a505c; border-radius:1vh;">Learn more</button>
+                            <a href="#about">
+                            <button class="white-btn" style="color:#4a505c; border-radius:1vh;">Learn more!</button>
+                            <a href="#contact">
+                            <button class="main-btn" style="color:#4a505c; border-radius:1vh;">Contact us!</button>
                             <center>
                                 <div class="arrow bounce" style="position:relative;top:9vh;">
                                     <a class="fa fa-arrow-down fa-2x" href="#" style="color:white;"></a>
